<resources>
    <string name="app_name">Tabula.Rasa</string>
    <string name="preview">preview</string>
    <string name="edit">edit</string>
    <string name="iam007_login">login</string>
    <string name="iam007_login_hint">Email Or Phone Number</string>
    <string name="iam007_password_hint">Password</string>
    <string name="iam007_forget_password"><u>忘记密码</u></string>

    <string name="login">登录</string>
    <string name="login_hint_username">输入手机号码</string>
    <string name="login_hint_password">输入密码</string>
    <string name="login_hint_username_is_null">用户名为空，请输入用户名！</string>
    <string name="login_hint_password_is_null">密码为空，请输入密码！</string>
    <string name="login_hint_waiting">正在登录&#8230;</string>

    <string name="register">注册</string>
    <string name="register_get_verify_code">获取验证码</string>
    <string name="register_hint_username_is_null">请输入手机号码！</string>
    <string name="register_hint_password_is_null">请输入密码！</string>
    <string name="register_hint_waiting">注册中&#8230;</string>
    <string name="register_hint_verify">输入验证码</string>

    <string name="activity_verify_title">验证手机号</string>
    <string name="verify">验证</string>
    <string name="verify_get_verify_code_waiting">%1$d秒</string>
    <string name="verify_hint_code_is_null">请输入验证码！</string>
    <string name="verify_sending_code">发送验证码中&#8230;</string>
    <string name="verify_please_check_sms">请检查短信中验证码</string>
    <string name="verify_hint_input_new_password">请输入新密码！</string>

    <string name="exception_user_phone_not_verified">手机号码未验证</string>
    <string name="exception_user_or_password_is_wrong">用户名或密码错误</string>
    <string name="exception_phone_already_registered">手机号码已注册</string>
    <string name="exception_user_doesnot_exist">用户名不存在</string>

    <string name="request_password_reset_phone_is_null">手机号码未空</string>

</resources>
