<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/iam007_activity_horizontal_edge_gap"
        android:paddingTop="@dimen/iam007_activity_horizontal_edge_gap"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/new_password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/iam007_activity_horizontal_edge_gap"
            android:layout_marginRight="@dimen/iam007_activity_horizontal_edge_gap"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleType="fitXY"
                android:src="@mipmap/iam007_account_avatar"/>

            <EditText
                android:id="@+id/new_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/verify_hint_input_new_password"
                android:inputType="number"
                android:maxLength="@integer/password_max_length"
                android:maxLines="1"
                android:paddingLeft="@dimen/iam007_activity_horizontal_item_gap"
                android:textColor="@color/iam007_edittext_color"
                android:textColorHint="@color/iam007_edittext_hint_color"
                android:textSize="18sp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"/>

        </LinearLayout>

        <View
            android:id="@+id/new_password_divider"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="@dimen/iam007_activity_vertical_item_gap"
            android:layout_marginLeft="@dimen/iam007_activity_horizontal_edge_gap"
            android:layout_marginRight="@dimen/iam007_activity_horizontal_edge_gap"
            android:layout_marginTop="@dimen/iam007_activity_vertical_item_gap"
            android:background="@color/iam007_divider"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/iam007_activity_horizontal_edge_gap"
            android:layout_marginRight="@dimen/iam007_activity_horizontal_edge_gap"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleType="fitXY"
                android:src="@mipmap/iam007_account_avatar"/>

            <EditText
                android:id="@+id/verify_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/register_hint_verify"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingLeft="@dimen/iam007_activity_horizontal_item_gap"
                android:textColor="@color/iam007_edittext_color"
                android:textColorHint="@color/iam007_edittext_hint_color"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/get_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_get_verify_code"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="@dimen/iam007_activity_vertical_item_gap"
            android:layout_marginLeft="@dimen/iam007_activity_horizontal_edge_gap"
            android:layout_marginRight="@dimen/iam007_activity_horizontal_edge_gap"
            android:layout_marginTop="@dimen/iam007_activity_vertical_item_gap"
            android:background="@color/iam007_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="12dp"
            android:paddingTop="0dp">

            <TextView
                android:id="@+id/error_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/iam007_activity_horizontal_edge_gap"
                android:layout_marginRight="@dimen/iam007_activity_horizontal_edge_gap"
                android:layout_weight="1"
                android:maxLines="1"
                android:paddingRight="3dp"
                android:textColor="@color/iam007_red_color_bg"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/forget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/iam007_activity_horizontal_edge_gap"
                android:layout_marginRight="@dimen/iam007_activity_horizontal_edge_gap"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="5dp"
                android:paddingRight="3dp"
                android:text="@string/iam007_forget_password"
                android:textColor="@color/iam007_red_color_bg"
                android:textSize="14sp"
                android:visibility="invisible"/>

        </LinearLayout>


        <Button
            android:id="@+id/verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/iam007_activity_horizontal_edge_gap"
            android:layout_marginRight="@dimen/iam007_activity_horizontal_edge_gap"
            android:background="@drawable/iam007_red_drawable_bg"
            android:text="@string/verify">
        </Button>

    </LinearLayout>
</ScrollView>