<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/iam007_activity_horizontal_edge_gap"
        android:paddingTop="@dimen/iam007_activity_horizontal_edge_gap">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/iam007_activity_horizontal_edge_gap"
            android:layout_marginRight="@dimen/iam007_activity_horizontal_edge_gap"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleType="fitXY"
                android:src="@mipmap/iam007_account_avatar"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/login_hint_username"
                android:inputType="phone"
                android:maxLength="100"
                android:paddingLeft="@dimen/iam007_activity_horizontal_item_gap"
                android:textColor="@color/iam007_edittext_color"
                android:textColorHint="@color/iam007_edittext_hint_color"
                android:textSize="18sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="@dimen/iam007_activity_vertical_item_gap"
            android:layout_marginLeft="@dimen/iam007_activity_horizontal_edge_gap"
            android:layout_marginRight="@dimen/iam007_activity_horizontal_edge_gap"
            android:layout_marginTop="@dimen/iam007_activity_vertical_item_gap"
            android:background="@color/iam007_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/iam007_activity_horizontal_edge_gap"
            android:layout_marginRight="@dimen/iam007_activity_horizontal_edge_gap"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleType="fitXY"
                android:src="@mipmap/iam007_password"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:maxLength="30"
                android:paddingLeft="@dimen/iam007_activity_horizontal_item_gap"
                android:textColor="@color/iam007_edittext_color"
                android:textColorHint="@color/iam007_edittext_hint_color"
                android:textSize="18sp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="@dimen/iam007_activity_vertical_item_gap"
            android:layout_marginLeft="@dimen/iam007_activity_horizontal_edge_gap"
            android:layout_marginRight="@dimen/iam007_activity_horizontal_edge_gap"
            android:layout_marginTop="@dimen/iam007_activity_vertical_item_gap"
            android:background="@color/iam007_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="0dp"
            android:paddingTop="0dp">

            <TextView
                android:id="@+id/error_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/iam007_activity_horizontal_edge_gap"
                android:layout_marginRight="@dimen/iam007_activity_horizontal_edge_gap"
                android:layout_weight="1"
                android:maxLines="1"
                android:paddingRight="3dp"
                android:textColor="@color/iam007_red_color_bg"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/iam007_activity_horizontal_edge_gap"
                android:layout_marginRight="@dimen/iam007_activity_horizontal_edge_gap"
                android:gravity="right"
                android:paddingBottom="12dp"
                android:paddingLeft="15dp"
                android:paddingRight="3dp"
                android:text="@string/iam007_forget_password"
                android:textColor="@color/iam007_red_color_bg"
                android:textSize="14sp"/>

        </LinearLayout>


        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/iam007_activity_horizontal_edge_gap"
            android:layout_marginRight="@dimen/iam007_activity_horizontal_edge_gap"
            android:background="@drawable/iam007_red_drawable_bg"
            android:text="@string/login">
        </Button>

    </LinearLayout>
</ScrollView>